[package]
name = "mastermind"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3.83", features = ["HtmlSelectElement"] }
wasm-bindgen = "0.2.106"
