[package]
name = "mastermind"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mastermind-web"
path = "src/bin/web.rs"
required-features = ["web"]

[[bin]]
name = "mastermind-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
rand = "0.9.2"

# Web dependencies
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"], optional = true }
web-sys = { version = "0.3.83", features = ["HtmlSelectElement"], optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }

# CLI dependencies
clap = { version = "4.5", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["cli"]
web = ["yew", "web-sys", "wasm-bindgen"]
cli = ["clap"]
